--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,101 @@
+/*Background*/
+
+.bg {
+    background: url(../../assets/img/galaxia.jpg) no-repeat;
+    background-size: cover;
+    height: 100%;
+    width: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: -3;
+}
+.bg:before {
+    content: "";
+    width: 100%;
+    height: 100%;
+    background: #000;
+    position: fixed;
+    z-index: -1;
+    top: 0;
+    left: 0;
+    opacity: 0.3;
+}
+@keyframes sf-fly-by-1 {
+    from {
+        transform: translateZ(-600px);
+        opacity: 0.5;
+    }
+    to {
+        transform: translateZ(0);
+        opacity: 0.5;
+    }
+}
+@keyframes sf-fly-by-2 {
+    from {
+        transform: translateZ(-1200px);
+        opacity: 0.5;
+    }
+    to {
+        transform: translateZ(-600px);
+        opacity: 0.5;
+    }
+}
+@keyframes sf-fly-by-3 {
+    from {
+        transform: translateZ(-1800px);
+        opacity: 0.5;
+    }
+    to {
+        transform: translateZ(-1200px);
+        opacity: 0.5;
+    }
+}
+.star-field {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    perspective: 600px;
+    -webkit-perspective: 600px;
+    z-index: -1;
+}
+.star-field .layer {
+    box-shadow: -411px -476px #cccccc, 777px -407px #d4d4d4, -387px -477px #fcfcfc, -91px -235px #d4d4d4, 491px -460px #f7f7f7, 892px -128px #f7f7f7, 758px -277px #ededed, 596px 378px #cccccc, 647px 423px whitesmoke, 183px 389px #c7c7c7,
+        524px -237px #f0f0f0, 679px -535px #e3e3e3, 158px 399px #ededed, 157px 249px #ededed, 81px -450px #ebebeb, 719px -360px #c2c2c2, -499px 473px #e8e8e8, -158px -349px #d4d4d4, 870px -134px #cfcfcf, 446px 404px #c2c2c2,
+        440px 490px #d4d4d4, 414px 507px #e6e6e6, -12px 246px #fcfcfc, -384px 369px #e3e3e3, 641px -413px #fcfcfc, 822px 516px #dbdbdb, 449px 132px #c2c2c2, 727px 146px #f7f7f7, -315px -488px #e6e6e6, 952px -70px #e3e3e3,
+        -869px -29px #dbdbdb, 502px 80px #dedede, 764px 342px #e0e0e0, -150px -380px #dbdbdb, 654px -426px #e3e3e3, -325px -263px #c2c2c2, 755px -447px #c7c7c7, 729px -177px #c2c2c2, -682px -391px #e6e6e6, 554px -176px #ededed,
+        -85px -428px #d9d9d9, 714px 55px #e8e8e8, 359px -285px #cfcfcf, -362px -508px #dedede, 468px -265px #fcfcfc, 74px -500px #c7c7c7, -514px 383px #dbdbdb, 730px -92px #cfcfcf, -112px 287px #c9c9c9, -853px 79px #d6d6d6,
+        828px 475px #d6d6d6, -681px 13px #fafafa, -176px 209px #f0f0f0, 758px 457px #fafafa, -383px -454px #ededed, 813px 179px #d1d1d1, 608px 98px whitesmoke, -860px -65px #c4c4c4, -572px 272px #f7f7f7, 459px 533px #fcfcfc,
+        624px -481px #e6e6e6, 790px 477px #dedede, 731px -403px #ededed, 70px -534px #cccccc, -23px 510px #cfcfcf, -652px -237px whitesmoke, -690px 367px #d1d1d1, 810px 536px #d1d1d1, 774px 293px #c9c9c9, -362px 97px #c2c2c2,
+        563px 47px #dedede, 313px 475px #e0e0e0, 839px -491px #e3e3e3, -217px 377px #d4d4d4, -581px 239px #c2c2c2, -857px 72px #cccccc, -23px 340px #dedede, -837px 246px white, 170px -502px #cfcfcf, 822px -443px #e0e0e0, 795px 497px #e0e0e0,
+        -814px -337px #cfcfcf, 206px -339px #f2f2f2, -779px 108px #e6e6e6, 808px 2px #d4d4d4, 665px 41px #d4d4d4, -564px 64px #cccccc, -380px 74px #cfcfcf, -369px -60px #f7f7f7, 47px -495px #e3e3e3, -383px 368px #f7f7f7, 419px 288px #d1d1d1,
+        -598px -50px #c2c2c2, -833px 187px #c4c4c4, 378px 325px whitesmoke, -703px 375px #d6d6d6, 392px 520px #d9d9d9, -492px -60px #c4c4c4, 759px 288px #ebebeb, 98px -412px #c4c4c4, -911px -277px #c9c9c9;
+    transform-style: preserve-3d;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    height: 4px;
+    width: 4px;
+    border-radius: 2px;
+}
+.star-field .layer:nth-child(1) {
+    animation: sf-fly-by-1 5s linear infinite;
+}
+.star-field .layer:nth-child(2) {
+    animation: sf-fly-by-2 5s linear infinite;
+}
+.star-field .layer:nth-child(3) {
+    animation: sf-fly-by-3 5s linear infinite;
+}
+
+
 /* Menu Cabeçalho */
 .menu{
 	position: fixed;
 	width: 100%;
+    background: #0000004f;
 }
 
 .menu ul {
@@ -14,7 +108,6 @@
 }
 
 .menu ul li {
-    /* display: inline; */
     position: relative;
 }
 
@@ -24,6 +117,10 @@
     display: inline-block;
     padding: 20px;
     transition: all 0.2s ease; 
+}
+
+#bin-menu:active a{
+    color: #123;
 }
 
 /*sub menu*/
@@ -58,16 +155,21 @@ body{
 }
 
 .bin-container{
-    position: relative;
-    top: 42vh;
-}
-
-.bin-inicio{
+    /* position: relative;
+    top: 42vh; 
+    display: contents;*/
     position: relative;
     top: 40%;
     padding-left: 60px;
     margin: 10px;
 }
+
+/* .bin-inicio{
+    position: relative;
+    top: 40%;
+    padding-left: 60px;
+    margin: 10px;
+} */
 
 .bin-inicio #bin-nome{
     font-family: serif;
@@ -100,11 +202,26 @@ body{
 
 
 #bin-menu{
-    /* position: relative; */
     display: flex;
-    /* top: 42vh;
-    left: 8vh; */
     background: none;
+    align-items: center;
+}
+#bin-inicio, #bin-sobre, #bin-resumo, #bin-portifolio, #bin-contato{
+    font-size: 23px;
+}
+
+#bin-inicio:hover, #bin-sobre:hover, #bin-resumo:hover, #bin-portifolio:hover, #bin-contato:hover{
+    font-size: 35px;
+    transition: 0.3s;
+}
+
+#bin-titulo{
+    font-weight: bold;
+    font-size: 50px;
+}
+
+.active{
+    color: #faf;
 }
 
 #bin-menu a::after {
@@ -126,14 +243,198 @@ body{
     transition: width .3s;
 }
 
-
 #bin-redes--sociais{
     position: relative;
-    top: 10vh;
+    display: flex;
+    font-size: 24px;
+    top: 6vh;
 }
+
+#bin-redes--sociais a{
+    text-decoration: none;
+    color: #fff;
+    border-bottom: solid;
+    border-top: solid;
+    padding: 10px;
+    transition:0.3s;
+}
+
+#bin-redes--sociais div{
+    margin: 10px;
+}
+
+#bin-linkedin a:hover{
+    border: none;
+    font-size: 40px;
+    color: #007bb5;
+}
+
+#bin-github a:hover{
+    border: none;
+    font-size: 40px;
+    color: #c9510c;
+}
+
+#bin-email a:hover{
+    border: none;
+    font-size: 40px;
+    color: #f9c064;
+}
+
+#bin-twitter a:hover{
+    border: none;
+    font-size: 40px;
+    color: #55ACEE;
+}
+
+#bin-whatsapp a:hover{
+    border: none;
+    font-size: 40px;
+    color: #25D366;
+}
+
 /* .menu ul li a:hover {
     border-bottom: solid 3px rgb(123, 0, 255);  
     /* background-color: #e93211; 
 	transition: 0.7s;
     transform-origin:  0% 50%; 
 } */
+
+
+
+
+
+
+
+
+
+
+
+
+/*===================================================================*/
+
+/*
+body {
+    margin:0;
+    padding:0;
+    background: #ebebeb;
+  }
+  ul {
+    position:absolute;
+    top:50%;
+    left:50%;
+    transform:translate(-50%,-50%);
+    margin:0;
+    padding:0;
+    display:flex;
+  }
+  ul li {
+    list-style:none;
+  }
+  ul li a {
+    display:block;
+    position:relative;
+    width:100px;
+    height:100px;
+    line-height:100px;
+    font-size:40px;
+    text-align:center;
+    text-decoration:none;
+    /* color:#404040;
+    margin: 0 30px;
+    transition:.5s;
+  }
+  ul li a span {
+    position:absolute;
+    transition: transform .5s;
+  }
+  ul li a span:nth-child(1),
+  ul li a span:nth-child(3){
+    width:100%;
+    height:3px;
+    background:#404040;
+  }
+  ul li a span:nth-child(1) {
+    top:0;
+    left:0;
+    transform-origin: right;
+  }
+  ul li a:hover span:nth-child(1) {
+    transform: scaleX(0);
+    transform-origin: left;
+    transition:transform .5s;
+  }
+  
+  ul li a span:nth-child(3) {
+    bottom:0;
+    left:0;
+    transform-origin: left;
+  }
+  ul li a:hover span:nth-child(3) {
+    transform: scaleX(0);
+    transform-origin: right;
+    transition:transform .5s;
+  }
+  
+  ul li a span:nth-child(2),
+  ul li a span:nth-child(4){
+    width:3px;
+    height:100%;
+    background:#404040;
+  }
+  ul li a span:nth-child(2) {
+    top:0;
+    left:0;
+    transform:scale(0);
+    transform-origin: bottom;
+  }
+  ul li a:hover span:nth-child(2) {
+    transform: scale(1);
+    transform-origin: top;
+    transition:transform .5s;
+  }
+  ul li a span:nth-child(4) {
+    top:0;
+    right:0;
+    transform:scale(0);
+    transform-origin: top;
+  }
+  ul li a:hover span:nth-child(4) {
+    transform: scale(1);
+    transform-origin: bottom;
+    transition:transform .5s;
+  }
+  
+  .facebook:hover {
+    color: #3b5998;
+  }
+  .facebook:hover span { 
+    background: #3b5998;
+  }
+  .twitter:hover {
+    color: #1da1f2;
+  }
+  .twitter:hover span { 
+    background: #1da1f2;
+  }
+  .instagram:hover {
+    color: #c32aa3;
+  }
+  .instagram:hover span { 
+    background: #c32aa3;
+  }
+  .google:hover {
+    color: #dd4b39;
+  }
+  .google:hover span { 
+    background: #dd4b39;
+  }
+  ul li a .twitter {
+    color: #1da1f2;
+  }
+  ul li a:hover:nth-child(3) {
+    color: #c32aa3;
+  }
+  ul li a:hover:nth-child(4) {
+    color: #dd4b39;
+  } */
