--- a/assets/css/style2.css
+++ b/assets/css/style2.css
@@ -176,10 +176,6 @@
     border-bottom: solid 2px purple;
 }
 
-a:active {
-    color:red;
-    }
-
 /*Conteudo*/
 
 .bin-conteudo{
@@ -193,6 +189,21 @@ a:active {
 
 .bin-layout2{
     padding: 20px;
+}
+
+#bin-m-titulo{
+    color: #a7a7a7;
+    font-size: 15px;
+    font-weight: bold;
+}
+
+#bin-m-titulo::after{
+    content: "";
+    width: 120px;
+    height: 1px;
+    display: inline-block;
+    background: #673AB7;
+    margin: 4px 10px;
 }
 
 #bin-titulo{
