--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,6 @@
 /*Background*/
 
-.bg {
+.bin-bg {
     background: url(../../assets/img/galaxia.jpg) no-repeat;
     background-size: cover;
     height: 100%;
@@ -10,7 +10,7 @@
     left: 0;
     z-index: -3;
 }
-.bg:before {
+.bin-bg:before {
     content: "";
     width: 100%;
     height: 100%;
@@ -51,7 +51,7 @@
         opacity: 0.5;
     }
 }
-.star-field {
+.bin-estrelas {
     position: fixed;
     top: 0;
     left: 0;
@@ -61,7 +61,7 @@
     -webkit-perspective: 600px;
     z-index: -1;
 }
-.star-field .layer {
+.bin-estrelas .bin-camada {
     box-shadow: -411px -476px #cccccc, 777px -407px #d4d4d4, -387px -477px #fcfcfc, -91px -235px #d4d4d4, 491px -460px #f7f7f7, 892px -128px #f7f7f7, 758px -277px #ededed, 596px 378px #cccccc, 647px 423px whitesmoke, 183px 389px #c7c7c7,
         524px -237px #f0f0f0, 679px -535px #e3e3e3, 158px 399px #ededed, 157px 249px #ededed, 81px -450px #ebebeb, 719px -360px #c2c2c2, -499px 473px #e8e8e8, -158px -349px #d4d4d4, 870px -134px #cfcfcf, 446px 404px #c2c2c2,
         440px 490px #d4d4d4, 414px 507px #e6e6e6, -12px 246px #fcfcfc, -384px 369px #e3e3e3, 641px -413px #fcfcfc, 822px 516px #dbdbdb, 449px 132px #c2c2c2, 727px 146px #f7f7f7, -315px -488px #e6e6e6, 952px -70px #e3e3e3,
@@ -80,13 +80,13 @@
     width: 4px;
     border-radius: 2px;
 }
-.star-field .layer:nth-child(1) {
+.bin-estrelas .bin-camada:nth-child(1) {
     animation: sf-fly-by-1 5s linear infinite;
 }
-.star-field .layer:nth-child(2) {
+.bin-estrelas .bin-camada:nth-child(2) {
     animation: sf-fly-by-2 5s linear infinite;
 }
-.star-field .layer:nth-child(3) {
+.bin-estrelas .bin-camada:nth-child(3) {
     animation: sf-fly-by-3 5s linear infinite;
 }
 
@@ -223,7 +223,7 @@
     width: 0;
     height: 2px;
     background: rgb(123, 0, 255);
-    transition: width .3s;
+    transition: width .6s;
 }
 
 #bin-menu a:hover{
@@ -232,7 +232,7 @@
 
 #bin-menu a:hover::after {
     width: 100%;
-    transition: width .3s;
+    transition: width 0.8s;
 }
 
 #bin-redes--sociais{
